exports[`test should render 1 start theme display 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render 2 start theme displays 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render 3 start theme displays 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render a comment 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <Comment
      className=""
      isTruncated={false}
      text="comment"
      textStyle="attention" />
  </div>
</div>
`;

exports[`test should render a default component 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body" />
</div>
`;

exports[`test should render a end accessory 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body" />
  <div
    className="terraClinical-ItemView-accessory">
    <img
      alt="Graphic" />
  </div>
</div>
`;

exports[`test should render a start accessory 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terraClinical-ItemView-body" />
</div>
`;

exports[`test should render an accessory center aligned 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terraClinical-ItemView-body" />
</div>
`;

exports[`test should render an accessory top aligned 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignTop">
  <div
    className="terraClinical-ItemView-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terraClinical-ItemView-body" />
</div>
`;

exports[`test should render one column 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render truncated display 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={true}
            text="display1display1display1display1display1display1display1display1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render two columns with 8 displays 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--twoColumns terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 3" />
        </div>
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 4" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 5" />
        </div>
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 6" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 7" />
        </div>
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 8" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render two columns with odd number of displays 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--twoColumns terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with 1 display 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with 2 displays 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with 3 displays 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--secondarySize terraClinical-ItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with a display and graphic 1`] = `
<div
  className="terraClinical-ItemView terraClinical-ItemView--oneColumn terraClinical-ItemView-accessory--alignCenter">
  <div
    className="terraClinical-ItemView-body">
    <div
      className="terraClinical-ItemView-rowContainer">
      <div
        className="terraClinical-ItemView-row">
        <div
          className="terraClinical-ItemView-content terraClinical-ItemView-content--primarySize terraClinical-ItemView-content--primaryColor">
          <Display
            icon={
              <img
                alt="Graphic" />
            }
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;
